fixing search bar on small screens

--- a/style.css
+++ b/style.css
@@ -109,3 +109,15 @@ input[type="checkbox"].toggle:checked + label:before, input[type="checkbox"].tog
 	left: 100%;
 	margin-left: -48px;
 }
+
+@media (min-width: 401px) {
+	.search {
+		border: 0;
+		height: 40px;
+		width: 400px;
+		font-size: 20px;
+		font-weight: 300;
+		text-align: center;
+		border-bottom: 1px solid lightgray;
+	}
+}
